<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityActualizar">

  <Button
      android:id="@+id/btnatras"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:layout_marginStart="32dp"
      android:backgroundTint="#FF9800"
      android:lineSpacingExtra="14sp"
      android:text="@string/btn_Regresar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.049"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:ignore="MissingConstraints" />

  <ImageView
      android:id="@+id/foto"
      android:layout_width="129dp"
      android:layout_height="141dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.106"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.14"
      tools:srcCompat="@tools:sample/avatars" />

  <Button
      android:id="@+id/btnSubirFoto"
      android:layout_width="0dp"
      android:layout_height="51dp"
      android:layout_marginStart="200dp"
      android:layout_marginEnd="32dp"
      android:backgroundTint="#2196F3"
      android:text="@string/btn_subir"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.223" />

  <Button
      android:id="@+id/btnTomarFoto"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="200dp"
      android:layout_marginEnd="32dp"
      android:backgroundTint="#4CAF50"
      android:text="@string/btn_foto"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.849"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.121" />

  <EditText
      android:id="@+id/txtnombre"
      android:layout_width="325dp"
      android:layout_height="48dp"
      android:layout_marginTop="4dp"
      android:ems="10"
      android:hint="@string/tvNom"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.383"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:layout_constraintVertical_bias="0.015" />

  <Spinner
      android:id="@+id/sppaices"
      style="@android:style/Widget.Holo.Light.Spinner"
      android:layout_width="325dp"
      android:layout_height="47dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.348"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.388" />

  <EditText
      android:id="@+id/txttelefono"
      android:layout_width="322dp"
      android:layout_height="44dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/te"
      android:inputType="number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.37"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="99dp"
      android:layout_height="31dp"
      android:layout_marginTop="4dp"
      android:text="@string/telefono"
      android:textAlignment="textStart"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.105"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtnombre" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="91dp"
      android:layout_height="34dp"
      android:layout_marginTop="12dp"
      android:text="@string/tv_nota"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.103"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txttelefono" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="70dp"
      android:layout_height="32dp"
      android:layout_marginTop="16dp"
      android:text="@string/tvN"
      android:textAlignment="center"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.087"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sppaices" />

  <Button
      android:id="@+id/btnEditar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="24dp"
      android:backgroundTint="#388E3C"
      android:text="@string/btn_Actualizar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtnota" />

  <EditText
      android:id="@+id/txtnota"
      android:layout_width="334dp"
      android:layout_height="44dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="24dp"
      android:background="#B9F6F1"
      android:ems="10"
      android:hint="@string/tv"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.428"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="56dp"
      android:layout_height="29dp"
      android:text="@string/tv1"
      android:textAlignment="center"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.084"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.337" />

  </androidx.constraintlayout.widget.ConstraintLayout>